--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="ASMSimulator">
 <head>
-    <title>Simple 8-bit Microprocessor Assembler Simulator</title>
+    <title>8-bit Microprocessor Assembler Simulator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/style.css">
@@ -21,7 +21,7 @@
                 <button type="button" class="btn btn-default navbar-btn" ng-click="reset()">Reset</button>
             </div>
             <div class="navbar-header navbar-right">
-                <a class="navbar-brand" style="color:#FFFFFF">Simple Web-based 8-bit Microprocessor Simulator</a>
+                <a class="navbar-brand" style="color:#FFFFFF">Web-based 8-bit Microprocessor Simulator</a>
             </div>
         </div>
     </nav>
