--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html ng-app="ASMSimulator">
 <head>
     <title>8-bit Microprocessor Assembler Simulator</title>
+    <link rel="icon" href="assets/favicon.ico" type="image/gif" sizes="32x32">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/style.css">
